tests/ui/macros/macro-attribute.stderr
error: expected expression, found `$`
  --> $DIR/macro-attribute.rs:1:9
   |
LL | #[doc = $not_there]
   |         ^ expected expression

error: aborting due to 1 previous error

