tests/ui/macros/macro-attribute.rs
#[doc = $not_there] //~ ERROR expected expression, found `$`
fn main() { }
